--- a/Windows Programming Exercises/MainWindow.xaml
+++ b/Windows Programming Exercises/MainWindow.xaml
@@ -244,7 +244,7 @@
                             <Button Click="CloseButton_OnClick"
                                     Style="{StaticResource MaterialDesignFloatingActionButton}"
                                     HorizontalAlignment="Left"
-                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" IsCancel="True">
+                                    BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Red" IsCancel="True">
                                 <StackPanel Margin="-5">
                                     <materialDesign:PackIcon Kind="Close" />
                                 </StackPanel>
